# BotsGame

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bots-router.js  cmake_log.txt  configure  constants.js  game-router.js  index-3.js  index.js  launch  package-lock.json  package.json  serv_constants.js  serv_util.js  util.js  utils.js
arch/: Bot.cpp  Bot.h  Controller.cpp  Controller.h  Game.cpp  Game.h  General.cpp  General.h  Hex.cpp  Hex.h  IFullAccess.h  IGetData.h  ISetData.h  Main.cpp  Map.cpp  Map.h  Pair.cpp  Player.cpp  Player.h  TGame.h  TMap.h  TPlayer.h  TUnit.h  TestBot.cpp  TestBot.h  Unit.cpp  Unit.h  Using.h  View.cpp  View.h  dynamic.h  main.cpp  scratchpad.js
gate/cmake/: HunterGate.cmake
html/: game.html  lobby.html  main.html  main_file_exists.html  on_404.html
scripts/: bonsai.js  game_page.js  graphics.js  main_page.js
